# winrate-prediction

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: predictions.py  stats.py
app/core/: config.py  riot_client.py
app/frontend/static/css/: styles.css
app/frontend/static/js/: app.js  dashboard.js
app/frontend/templates/: dashboard.html  index.html
app/services/: analyzer.py  features.py  model.py
docs/: data_pipeline.md  modelo.md  solution_problem.md
docs/pruebas/: api_prediccion.md  dashboard.md
scripts/: generate_raw_matches_csv.py  process_matches.py  train_model.py
tests/: test_api.py  test_features.py  test_model_service.py
